--- a/AperoApp-SPA/src/app/app.component.html
+++ b/AperoApp-SPA/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div>
-  <h1>
-    Apero App
-  </h1>
-  <app-value></app-value>   
-</div>
+  <app-nav></app-nav> 
+  <router-outlet></router-outlet> 
