--- a/AperoApp-SPA/src/app/nav/nav.component.html
+++ b/AperoApp-SPA/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark ">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary ">
   <div class="container">   
     <a class="nav-brand" [routerLink]="['/home']"><img src="../../assets/Apero logo.png" alt="Apero" class="logo"></a> 
     <ul class="navbar-nav mr-auto">
@@ -14,32 +14,27 @@
       <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/contact']">Contact</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" (click)="logout()">Logout</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/register']">Register</a>
-      </li>
     </ul>
-    <div *ngIf="!loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
+    <div *ngIf="!loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
         More
       </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" [routerLink]="['/login']">Admin</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" [routerLink]="['/login']"> <i class="fa fa-lock"></i> Admin</a>
       </div>
     </div>
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome user
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome, {{authService.decodedToken.unique_name | titlecase}}
       </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Members</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" [routerLink]="['/register']"> <i class="fa fa-user-plus"></i> Register</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+        <a class="dropdown-item" href="#"> <i class="fa fa-users"></i> Members</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
       </div>
     </div>
-    <button class="btn btn-primary my-2 my-sm-0" type="button" [routerLink]="['/login']">Admin</button>
   </div>
   
 </nav>
