--- a/AperoApp-SPA/src/app/nav/nav.component.html
+++ b/AperoApp-SPA/src/app/nav/nav.component.html
@@ -32,7 +32,7 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" [routerLink]="['/members']"> <i class="fa fa-users"></i> Edit members</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" [routerLink]="['/bikes-edit']"> <i class="fa fa-bicycle"></i> Edit bikes</a>
+        <a class="dropdown-item" [routerLink]="['/edit-bikes']"> <i class="fa fa-bicycle"></i> Edit bikes</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
       </div>
