--- a/AperoApp-SPA/src/app/register/register.component.html
+++ b/AperoApp-SPA/src/app/register/register.component.html
@@ -7,6 +7,8 @@
 
         <input class="form-control" type="email" name="username" placeholder="Username" required [(ngModel)]="model.username">
         <input class="form-control mt-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password">
+        <input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Confirm" required>
+        <div class="help-block with-errors"></div>
         <div class="form-group text-center mt-3">
             <button class="btn btn-lg btn-success" [disabled]="!registerForm.valid" type="submit">Register</button>
             <button class="btn btn-lg btn-default" type="button" (click)="cancel()">Cancel</button>
