--- a/AperoApp-SPA/src/app/bikes-root/edit-bike/edit-bike.component.html
+++ b/AperoApp-SPA/src/app/bikes-root/edit-bike/edit-bike.component.html
@@ -39,12 +39,12 @@
           <tr>
             <th>Wheel size:</th>
             <td>{{ bike.wheelSize }}"</td>
-            <td><input class="form-control" type="text" name="wheelSize" [(ngModel)]="bike.wheelSize" placeholder="{{bike.wheelSize}}"></td>
+            <td><input class="form-control" type="number" name="wheelSize" [(ngModel)]="bike.wheelSize" placeholder='{{bike.wheelSize}}'></td>
           </tr>
           <tr>
             <th>Weight:</th>
             <td>{{ bike.weight }} kg</td>
-            <td><input class="form-control" type="text" name="weight" [(ngModel)]="bike.weight" placeholder="{{bike.weight}}"></td>
+            <td><input class="form-control" type="number" step="0.01" name="weight" [(ngModel)]="bike.weight" placeholder="{{bike.weight}}"></td>
           </tr>
           <tr>
             <th>Color:</th>
@@ -59,7 +59,7 @@
           <tr>
             <th>Number of gears:</th>
             <td>{{ bike.gears }}</td>
-            <td><input class="form-control" type="text" name="gears" [(ngModel)]="bike.gears" placeholder="{{bike.gears}}"></td>
+            <td><input class="form-control" type="number" name="gears" [(ngModel)]="bike.gears" placeholder="{{bike.gears}}"></td>
           </tr>
           <tr>
             <th>Type of gears:</th>
@@ -74,7 +74,7 @@
           <tr>
             <th>Recommended minimum biker height:</th>
             <td>{{ bike.bikerHeight }}</td>
-            <td><input class="form-control" type="text" name="bikerHeight" [(ngModel)]="bike.bikerHeight" placeholder="{{bike.bikerHeight}}"></td>
+            <td><input class="form-control" type="number" name="bikerHeight" [(ngModel)]="bike.bikerHeight" placeholder="{{bike.bikerHeight}}"></td>
           </tr>
           <tr>
             <th>Luggage rack:</th>
