--- a/AperoApp-SPA/src/app/bikes-root/bike-card/bike-card.component.css
+++ b/AperoApp-SPA/src/app/bikes-root/bike-card/bike-card.component.css
@@ -1,3 +1,10 @@
 img:hover {
     opacity: 0.7;
 }
+
+img {
+    height: 260px !important;
+    width: auto;
+    display: block;
+    margin: auto !important;
+}
