--- a/AperoApp-SPA/src/app/bikes-root/edit-bikes/edit-bikes.component.html
+++ b/AperoApp-SPA/src/app/bikes-root/edit-bikes/edit-bikes.component.html
@@ -2,20 +2,23 @@
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Img:</th>
+        <th scope="col" style="width: 3%;">#</th>
+        <th scope="col" style="width: 15%;">Img:</th>        
         <th scope="col">Name:</th>
         <th scope="col">Date added:</th>
+        <th></th>
+        <th colspan="2"></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let bike of bikes">
         <th scope="row">{{bike.id}}</th>
-        <td><img src="{{bike.photoUrl}}" alt="{{bike.name | titlecase}}"></td>
+        <td class="text-center" style="width: 15%;"><img src="{{bike.photoUrl}}" alt="{{bike.name | titlecase}}"></td>        
         <td>{{bike.name | titlecase}}</td>
         <td>{{bike.dateAdded | date}}</td>
-        <td><button class="btn btn-success" type="button" (click)="goToEditBike(bike.id)">Edit</button></td>
-        <td><button class="btn btn-danger" type="button" (click)="deleteBike(bike.id)">Delete</button></td>
+        <td style="width: 30%;"></td>
+        <td class="button-container"><button class="btn btn-success" type="button" (click)="goToEditBike(bike.id)">Edit</button></td>
+        <td class="button-container"><button class="btn btn-danger" type="button" (click)="deleteBike(bike.id)">Delete</button></td>
       </tr>
     </tbody>
   </table> 
