--- a/AperoApp-SPA/src/app/bikes-root/edit-bikes/edit-bikes.component.html
+++ b/AperoApp-SPA/src/app/bikes-root/edit-bikes/edit-bikes.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <table class="table table-hover">
+  <button class="btn btn-primary create mt-4" type="button" [routerLink]="['/add-new-bike']">Create New Bike</button>
+
+  <table class="table table-hover mt-4">
     <thead>
       <tr>
         <th scope="col" style="width: 3%;">#</th>
@@ -13,7 +15,9 @@
     <tbody>
       <tr *ngFor="let bike of bikes">
         <th scope="row">{{bike.id}}</th>
-        <td class="text-center" style="width: 15%;"><img src="{{bike.photoUrl}}" alt="{{bike.name | titlecase}}"></td>        
+        <td class="text-center" style="width: 15%;">
+          <img src="{{bike.photoUrl || '../../../../../assets/Apero logo.png'}}" alt="{{bike.name | titlecase}}">
+        </td>        
         <td>{{bike.name | titlecase}}</td>
         <td>{{bike.dateAdded | date}}</td>
         <td style="width: 30%;"></td>
@@ -21,5 +25,5 @@
         <td class="button-container"><button class="btn btn-danger" type="button" (click)="deleteBike(bike.id)">Delete</button></td>
       </tr>
     </tbody>
-  </table> 
+  </table>         
 </div>
