--- a/AperoApp-SPA/src/app/members/members-edit/members-edit.component.css
+++ b/AperoApp-SPA/src/app/members/members-edit/members-edit.component.css
@@ -1,10 +1,18 @@
+th {
+    vertical-align: middle;
+}
+
+td {
+    vertical-align: middle;
+}
+
 .btn {
     margin: 0 !important;
 }
 
 
 .vertical-center {
-    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100%;
   
     display: flex;
     align-items: center;
