--- a/AperoApp-SPA/src/app/bikes-root/bike-card/bike-card.component.css
+++ b/AperoApp-SPA/src/app/bikes-root/bike-card/bike-card.component.css
@@ -2,9 +2,21 @@ img:hover {
     opacity: 0.7;
 }
 
+div.card-img-wrapper {
+    height: 200px;
+    width: 100%;
+}
+
+div.card-body {
+}
+
 img {
-    height: 260px !important;
+    max-height: 100% !important;
     width: auto;
     display: block;
     margin: auto !important;
+}
+
+div.bike-info {
+    width: 90% !important;
 }
