--- a/AperoApp-SPA/src/app/bikes-root/bike-card/bike-card.component.html
+++ b/AperoApp-SPA/src/app/bikes-root/bike-card/bike-card.component.html
@@ -1,30 +1,24 @@
-<div class="card mt-4" style="height: 300px;">
+<div class="card mt-4">
   <div class="row">
-    <div class="col-sm-5" >
-      <div class="card-body">
-        <div class="card-img-wrapper">
-          <a [routerLink]="['/bikes/', bike.id]"><img class="card-img" 
-            src="{{bike.photoUrl || '../../../../../assets/Apero logo.png'}}" alt="{{bike.name}}">
-          </a>
-        </div>
-      </div>        
-    </div>
-    <div class="col-sm-3">
-      <div class="card-body" style="padding-right: 0;">
-        <h4 class="card-title text-left">Info:</h4>
-        <hr>
-        <p class="card-text text-left">Name: {{bike.name | titlecase}}</p>
-        <p class="card-text text-left">Brand: {{bike.brand | titlecase}}</p>
-        <p class="card-text text-left">Gears: {{bike.gears}}</p>
-        <p class="card-text text-left">Type: {{bike.type}}</p>
+    <div class="card-body">
+      <div class="card-img-wrapper">
+        <a [routerLink]="['/bikes/', bike.id]"><img class="card-img" 
+          src="{{bike.photoUrl || '../../../../../assets/Apero logo.png'}}" alt="{{bike.name}}">
+        </a>
       </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="card-body" style="padding-left: 0;">
-          <h4 class="card-title text-left">Description:</h4>
-          <hr>
-          <p class="card-text">{{bike.description}}</p>
-        </div>
-    </div>
-  </div>  
-</div>
+    </div>        
+  </div> 
+  <div class="row">
+    <div class="col-sm-1"></div>
+    <div class="card-body col-sm-10">
+      <h5 class="card-title text-left">Info:</h5>
+      <hr>
+      <p class="card-text text-left"><strong>Name:</strong>&nbsp; {{bike.name | titlecase}}</p>
+      <p class="card-text text-left"><strong>Brand:</strong>&nbsp; {{bike.brand | titlecase}}</p>
+      <p class="card-text text-left"><strong>Gears:</strong>&nbsp; {{bike.gears}}</p>
+      <p class="card-text text-left"><strong>Type:</strong>&nbsp; {{bike.type}}</p>
+    </div> 
+    <div class="col-sm-1"></div>
+  </div>
+</div> 
+  
