--- a/AperoApp-SPA/src/app/login/login.component.html
+++ b/AperoApp-SPA/src/app/login/login.component.html
@@ -5,7 +5,7 @@
       <h1 class="mb-3 text-primary">Sign in</h1>
       <hr>
 
-      <input class="form-control" type="email" name="username" placeholder="Username" required [(ngModel)]="model.username">
+      <input class="form-control" type="email" name="username" placeholder="Username/Email" required [(ngModel)]="model.username">
       <input class="form-control mt-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password">
       <div class="checkbox mb-2">
         <label>
@@ -13,7 +13,7 @@
         </label>
       </div>
       <div class="form-group text-center mt-2">
-          <button class="btn btn-lg btn-success" [disabled]="!loginForm.valid" type="submit">Login</button>
+          <button class="btn btn-lg btn-success"  type="submit">Login</button>
           <button class="btn btn-lg btn-default" type="button" (click)="cancel()">Cancel</button>
       </div>  
     </form>
