--- a/AperoApp-SPA/src/app/register/register.component.html
+++ b/AperoApp-SPA/src/app/register/register.component.html
@@ -7,16 +7,34 @@
         </div>      
       </div>
       <div class="row mb-4">
-        <div class="col-4">
+        <div class="col-3">
+          <input type="email"
+            [ngClass]="{'is-invalid': registerForm.get('email').errors 
+              && registerForm.get('email').touched}"
+            class="form-control" 
+            formControlName="email" 
+            placeholder="Email">
+          <div class="invalid-feedback" 
+            *ngIf="registerForm.get('email').hasError('required') 
+            && registerForm.get('email').touched">
+            Please enter an email
+          </div>
+          <div class="invalid-feedback" 
+            *ngIf="registerForm.get('email').hasError('pattern') 
+              && registerForm.get('email').touched">
+            Email is invalid
+          </div>
+        </div>
+        <div class="col-3">
           <input type="text"
             [ngClass]="{'is-invalid': registerForm.get('username').errors 
               && registerForm.get('username').touched}"
             class="form-control" 
             formControlName="username" 
             placeholder="Username">
-          <div class="invalid-feedback">Please choose a username</div>
+          <div class="invalid-feedback">Please choose a username</div>          
         </div>
-        <div class="col-4">
+        <div class="col-3">
           <input class="form-control" type="password" 
             [ngClass]="{'is-invalid': registerForm.get('password').errors 
               && registerForm.get('password').touched}"
@@ -38,7 +56,7 @@
             Password cannot exceed 16 characters
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-3">
           <input class="form-control" 
             [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors 
               && registerForm.get('confirmPassword').touched
@@ -65,4 +83,6 @@
       </div>      
     </div>    
   </form>
+
+<p>value: {{registerForm.value | json}}</p>
     
